<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/grupo2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/title_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-light"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/verde"
        android:textSize="20sp"
        android:text="our menu"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@+id/title_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <Button
                android:id="@+id/button_antojitos"
                android:text="@string/antojitos"
                android:textColor="@color/white"
                android:background="@drawable/first_gradient"
                android:paddingHorizontal="@dimen/menu_buttons_paddings"
                android:layout_marginRight="@dimen/menu_buttons_margin"
                android:layout_gravity="fill_horizontal"
                android:layout_columnWeight="1"
                android:textSize="@dimen/menu_buttons_text"
                android:paddingVertical="@dimen/menu_buttons_paddings"
                />
            <Button
                android:id="@+id/button_especialidades"
                android:text="@string/especialidades"
                android:textColor="@color/white"
                android:background="@drawable/first_gradient"
                android:paddingHorizontal="@dimen/menu_buttons_paddings"
                android:layout_marginRight="@dimen/menu_buttons_margin"
                android:layout_gravity="fill_horizontal"
                android:layout_columnWeight="1"
                android:textSize="@dimen/menu_buttons_text"
                android:paddingVertical="@dimen/menu_buttons_paddings"
                />
            <Button
                android:id="@+id/button_combinations"
                android:text="@string/combinations"
                android:textColor="@color/white"
                android:background="@drawable/first_gradient"
                android:paddingHorizontal="@dimen/menu_buttons_paddings"
                android:layout_marginRight="@dimen/menu_buttons_margin"
                android:layout_gravity="fill_horizontal"
                android:layout_columnWeight="1"
                android:textSize="@dimen/menu_buttons_text"
                android:paddingVertical="@dimen/menu_buttons_paddings"
                />
            <Button
                android:id="@+id/button_tortas"
                android:text="@string/tortas"
                android:textColor="@color/white"
                android:background="@drawable/first_gradient"
                android:paddingHorizontal="@dimen/menu_buttons_paddings"
                android:layout_marginRight="@dimen/menu_buttons_margin"
                android:layout_gravity="fill_horizontal"
                android:layout_columnWeight="1"
                android:textSize="@dimen/menu_buttons_text"
                android:paddingVertical="@dimen/menu_buttons_paddings"
                />
            <Button
                android:id="@+id/button_sopas"
                android:text="@string/sopas"
                android:textColor="@color/white"
                android:background="@drawable/first_gradient"
                android:paddingHorizontal="@dimen/menu_buttons_paddings"
                android:layout_marginRight="@dimen/menu_buttons_margin"
                android:layout_gravity="fill_horizontal"
                android:layout_columnWeight="1"
                android:textSize="@dimen/menu_buttons_text"
                android:paddingVertical="@dimen/menu_buttons_paddings"
                />
            <Button
                android:id="@+id/button_drinks"
                android:text="@string/drinks"
                android:textColor="@color/white"
                android:background="@drawable/first_gradient"
                android:paddingHorizontal="@dimen/menu_buttons_paddings"
                android:layout_marginRight="@dimen/menu_buttons_margin"
                android:layout_gravity="fill_horizontal"
                android:layout_columnWeight="1"
                android:textSize="@dimen/menu_buttons_text"
                android:paddingVertical="@dimen/menu_buttons_paddings"
                />
        </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>